--- a/genicns.1
+++ b/genicns.1
@@ -6,7 +6,8 @@
 .Nd Generate ICNS file from image file
 .Sh SYNOPSIS
 .Nm genicns
-.Op Fl hlosv
+.Op Fl hlsv
+.Op Fl o Ar file
 .Op Ar file ...
 .Sh DESCRIPTION
 .Nm
