man page: Fix wrong sentence

--- a/genicns.1
+++ b/genicns.1
@@ -27,7 +27,7 @@ Display help message
 Display version information
 .El
 .Pp
-Supported options:
+Supported file formats:
 .Bl -tag -width Ds
 .It PNG
 Native support
