man page: divide information about file formats

--- a/genicns.1
+++ b/genicns.1
@@ -26,8 +26,9 @@ Display help message
 .It Fl v , Fl Fl version
 Display version information
 .El
-.Pp
-Supported file formats:
+.Sh FILE FORMATS
+.Nm
+supports many file formats using some different commands.
 .Bl -tag -width Ds
 .It PNG
 Native support
