Use ImageMagick instead of ExifTool to strip metadata

--- a/genicns.1
+++ b/genicns.1
@@ -1,4 +1,4 @@
-.Dd September 21, 2025
+.Dd November 28, 2025
 .Dt GENICNS 1
 .Os
 .Sh NAME
@@ -18,7 +18,7 @@ Supported options:
 .It Fl o Ar file , Fl Fl output Ar file
 Specify the name of the output file
 .It Fl s , Fl Fl strip
-Strip all metadata (ExifTool is required)
+Strip all metadata (ImageMagick is required)
 .It Fl l , Fl Fl leave
 Leave .iconset directory
 .It Fl h , Fl Fl help
